<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <import type="android.view.View" />

        <variable
            name="vm"
            type="org.android.go.sopt.presentation.signup.SignUpViewmodel" />
    </data>


    <ScrollView
        android:id="@+id/sv_signup"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/layout_signup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingVertical="60dp">


            <TextView
                android:id="@+id/tv_signup"
                style="@style/TextAppearance.black"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:gravity="center"
                android:text="@string/signup"
                android:textSize="25sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_name"
                style="@style/TextAppearance.black"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="40dp"
                android:layout_marginTop="30dp"
                android:layout_marginEnd="40dp"
                android:text="@string/name"
                android:textSize="15sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_signup" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/layout_et_name"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                app:errorEnabled="true"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_name">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_name"
                    style="@style/TextAppearance.black"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginStart="40dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="40dp"
                    android:autofillHints=""
                    android:hint="@string/et_name"
                    android:inputType="text"
                    android:maxLines="1"
                    android:text="@={vm._name}"
                    android:textSize="15sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tv_name">

                </com.google.android.material.textfield.TextInputEditText>
            </com.google.android.material.textfield.TextInputLayout>


            <TextView
                android:id="@+id/tv_id"
                style="@style/TextAppearance.black"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="40dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="40dp"
                android:text="@string/id"
                android:textSize="15sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/layout_et_name" />


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/layout_et_id"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                app:counterEnabled="true"
                app:counterMaxLength="10"
                app:errorEnabled="true"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_id">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_id"
                    style="@style/TextAppearance.black"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginStart="40dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="40dp"
                    android:autofillHints=""
                    android:hint="@string/edit_id"
                    android:inputType="text"
                    android:maxLines="1"
                    android:text="@={vm._id}"
                    android:textSize="15sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tv_id">

                </com.google.android.material.textfield.TextInputEditText>
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/tv_pw"
                style="@style/TextAppearance.black"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="40dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="40dp"
                android:text="@string/pw"
                android:textSize="15sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/layout_et_id" />


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/layout_et_pw"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                app:counterEnabled="true"
                app:counterMaxLength="12"
                app:errorEnabled="true"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_pw">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_pw"
                    style="@style/TextAppearance.black"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginStart="40dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="40dp"
                    android:autofillHints=""
                    android:hint="@string/edit_pw"
                    android:inputType="text"
                    android:maxLines="1"
                    android:text="@={vm._pw}"
                    android:textSize="15sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tv_pw">

                </com.google.android.material.textfield.TextInputEditText>
            </com.google.android.material.textfield.TextInputLayout>


            <TextView
                android:id="@+id/tv_mbti"
                style="@style/TextAppearance.black"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="40dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="40dp"
                android:text="@string/tv_specialty"
                android:textSize="15sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/layout_et_pw" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/layout_et_specialty"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                app:errorEnabled="true"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_mbti">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_skill"
                    style="@style/TextAppearance.black"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginStart="40dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="40dp"
                    android:autofillHints=""
                    android:hint="@string/et_specailty"
                    android:inputType="text"
                    android:maxLines="1"
                    android:text="@={vm._skill}"
                    android:textSize="15sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tv_mbti">

                </com.google.android.material.textfield.TextInputEditText>
            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/btn_signup"
                style="@style/TextAppearance.white"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingVertical="15dp"
                android:text="@string/btn_signup"
                app:layout_constraintTop_toBottomOf="@+id/layout_et_specialty" />


        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</layout>